# termux-web-scraper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
scripts/: run.sh
scripts/distro/: install_dependencies.sh  run_distro.sh  run_vnc.sh  setup_vnc.sh  terminate_vnc.sh
scripts/termux/: install_dependencies.sh
termux_web_scraper/: error_hook.py  helpers.py  notifier.py  scraper_builder.py  scraper_runner.py
