[tool.poetry]
name = "termux-web-scraper"
version = "0.1.0"
description = ""
authors = ["kpliuta <9212935+kpliuta@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
